namespace/istio/1-ingress-bank-integration.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: bank-integration-gw
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
        - "*.bain-integration.com"
        - "bain-integration.com"
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-all
  namespace: bank-integration
spec:
  rules:
    - {}
